--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "echarts": "^5.4.0",
         "element-ui": "2.12.0",
         "ezuikit-js": "^0.6.0",
+        "flv.js": "^1.6.2",
         "font-awesome": "^4.7.0",
         "mqtt": "^3.0.0",
         "net": "^1.0.2",
         "nprogress": "^0.2.0",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
+        "videojs": "^1.0.0",
         "vue": "^2.2.2",
         "vue-amap": "^0.5.10",
         "vue-animate-number": "^0.4.2",
