--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "nprogress": "^0.2.0",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
+        "video.js": "^5.6.0",
         "videojs": "^1.0.0",
         "vue": "^2.2.2",
         "vue-amap": "^0.5.10",
